Vault updates: appearance community-plugins daily-notes data main manifest workspace-mobile The Person of Jesus (Full Lesson) Working memory 1-28-25

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "theme": "obsidian",
-  "cssTheme": "Rosé Pine",
+  "cssTheme": "Minimal",
   "interfaceFontFamily": "JetBrainsMono Nerd Font",
   "textFontFamily": "JetBrainsMono Nerd Font",
   "baseFontSizeAction": true,
