--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -19,6 +19,7 @@
     "editor:toggle-numbered-list",
     "editor:indent-list",
     "editor:unindent-list",
+    "editor:insert-embed",
     "editor:undo",
     "editor:redo",
     "editor:configure-toolbar"
