--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "theme": "obsidian",
-  "cssTheme": "",
+  "cssTheme": "Vanilla AMOLED",
   "interfaceFontFamily": "JetBrainsMono Nerd Font",
   "textFontFamily": "JetBrainsMono Nerd Font",
   "baseFontSizeAction": true,
