Vault updates: app community-plugins daily-notes graph data workspace-mobile 1003251310 1103252352 12032025 1203251628 1303252007 1403251556 15032025 proffieboard-example-code swift-doc-notes packing-for-mission-trip packing-for-mission-trip

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -13,6 +13,8 @@
   "mobileToolbarCommands": [
     "editor:insert-wikilink",
     "editor:toggle-checklist-status",
+    "editor:toggle-code",
+    "editor:insert-tag",
     "editor:attach-file",
     "editor:toggle-highlight",
     "editor:toggle-bullet-list",
@@ -23,5 +25,6 @@
     "editor:undo",
     "editor:redo",
     "editor:configure-toolbar"
-  ]
+  ],
+  "tabSize": 4
 }
