--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,4 +1,5 @@
 {
+  "alwaysUpdateLinks": true,
   "mobileToolbarCommands": [
     "editor:insert-wikilink",
     "editor:toggle-bullet-list",
@@ -19,5 +20,6 @@
     "editor:redo",
     "editor:configure-toolbar"
   ],
-  "alwaysUpdateLinks": true
+  "vimMode": true,
+  "promptDelete": false
 }
