--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,14 +1,6 @@
 {
-<<<<<<< HEAD
-  "theme": "obsidian",
-  "cssTheme": "",
+  "cssTheme": "Minimal",
   "interfaceFontFamily": "JetBrainsMono Nerd Font",
   "textFontFamily": "JetBrainsMono Nerd Font",
-  "baseFontSizeAction": true,
-  "translucency": true,
-  "baseFontSize": 14,
-  "accentColor": "#889eaa"
-=======
-  "cssTheme": "Minimal"
->>>>>>> 1f55f11378e995db93d70edd33bcb4a5bea9b4bc
+  "theme": "obsidian"
 }
