--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -19,5 +19,6 @@
     "editor:redo",
     "editor:configure-toolbar"
   ],
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "promptDelete": false
 }
