Vault autocommit on iPhone

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -24,5 +24,6 @@
   "foldHeading": false,
   "foldIndent": false,
   "showLineNumber": false,
-  "strictLineBreaks": false
+  "strictLineBreaks": false,
+  "showInlineTitle": false
 }
