--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -25,5 +25,6 @@
   "foldIndent": false,
   "showLineNumber": false,
   "strictLineBreaks": false,
-  "showInlineTitle": false
+  "showInlineTitle": false,
+  "vimMode": true
 }
