Vault autocommit on iPhone

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,6 +2,7 @@
   "alwaysUpdateLinks": true,
   "mobileToolbarCommands": [
     "editor:insert-wikilink",
+    "editor:insert-tag",
     "editor:toggle-bullet-list",
     "editor:toggle-checklist-status",
     "editor:set-heading",
